--- a/style.css
+++ b/style.css
@@ -1,6 +1,24 @@
 .band-color{
     color: orange;
+    
 }
 body{
     font-family: 'Poppins', sans-serif;
+}
+.display-flex{
+    display: flex;
+}
+.page-width{
+    width: 50%;
+    padding: 50px;
+}
+.page-width img{
+    width:80%;
+}
+.button{
+    text-decoration: none;
+    background-image: linear-gradient(orange,tomato);
+    padding: 10px 20px;
+    color: black;
+    border-radius: 10px;
 }
